# tts-documentos

./: .gitignore  README.md
src/: .exemple.env  docker-compose.yml  pyproject.toml
src/ttsdocumentos_api/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/ttsdocumentos_api/routers/: documetos_router.py  tts_router.py
src/ttsdocumentos_lib_core/: pyproject.toml
src/ttsdocumentos_lib_core/src/ttsdocumentos_core/: __init__.py  azure_blob.py  config.py
src/ttsdocumentos_lib_core/src/ttsdocumentos_core/common/: audio_helper.py
src/ttsdocumentos_lib_core/src/ttsdocumentos_core/domiain/workers/: extract_text_dto.py  finalize_text_dto.py  queue_dto_base.py  transcribe_text_dto.py  treat_text_dto.py
src/ttsdocumentos_lib_core/src/ttsdocumentos_core/log/: log_maneger.py
src/ttsdocumentos_lib_core/src/ttsdocumentos_core/process/: kokoro_tts.py  text_process.py
src/ttsdocumentos_lib_core/src/ttsdocumentos_core/rabbitmq/: rabbitmq.py
src/ttsdocumentos_lib_core/src/ttsdocumentos_core/services/: tts_service.py
src/ttsdocumentos_workers/: Dockerfile  README.md  main.py  pyproject.toml
src/ttsdocumentos_workers/workers/: extract_text.py  finalizar_processo.py  transcrever_texto.py  tratar_texto.py
src_old/: .dockerignore  docker-compose.yml  pyproject.toml
src_old/api/: main.py  pyproject.toml  worker.py
src_old/core/: config.py  log_maneger.py  pyproject.toml
src_old/core/utils/: azure_blob.py  rabbitmq.py
