[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.26.0",
    "pika>=1.3.2",
    "pydantic-settings>=2.10.1",
]

[tool.uv.workspace]
members = [
    "core",
    "api",
    "workers",
]