[project]
name = "ttsdocumentos-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ramon Cardoso de Oliveira" }
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.7",
    "azure-storage-blob>=12.26.0",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
