[project]
name = "ttsdocumentos-workers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.7",
    "panflute>=2.3.1",
    "pypandoc>=1.15",
    "ttsdocumentos-core",
]

[tool.uv.sources]
ttsdocumentos-core = { workspace = true }
